# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: datahandler.py  index.py  performance.py  suorituskyky.py
src/entities/: avaimenpera.py  inbox.py  key.py  keychain.py  message.py  postilaatikko.py  viesti.py
src/logic/: alkulukugen.py  avaingen.py  encryptdecrypt.py  keygen.py  prime.py  primegen.py  randomgen.py  salauspurku.py  satunnaisgen.py
src/repositories/: datahandler.py  tiedostonkasittelija.py
src/tests/: alkuluku_test.py  app_test.py  avaimenpera_test.py  datahandler_test.py  encryptdecrypt_test.py  keychain_test.py  millerrabin_test.py  postilaatikko_test.py  prime_test.py  salauspurku_test.py  tiedostonkasittelija_test.py
src/ui/: app.py  io.py  readerwriter.py  sovellus.py
