[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["katajak <101673344+katajak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
