[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["katajak <101673344+katajak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
pytest = "^7.2.1"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
